feat: creates api to delete book
